Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,9 @@
     // files
     "files.associations": {
         "*.S": "gas",
+        "*.kernel": "makefile",
+        "*.uclibc": "makefile",
+        "*.bb": "makefile",
     },
 
     // editor
