Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
     ],
 
     // files
+    "files.exclude": {
+        "root/lib/modules/*/build": true,
+        "root/lib/modules/*/source": true,
+    },
     "files.associations": {
         "*.S": "gas",
         "*.kernel": "makefile",
