--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,15 @@
     ],
 
     // files
+    "files.exclude": {
+        "root/lib/modules/*/build": true,
+        "root/lib/modules/*/source": true,
+    },
     "files.associations": {
         "*.S": "gas",
+        "*.kernel": "makefile",
+        "*.uclibc": "makefile",
+        "*.bb": "makefile",
     },
 
     // editor
