Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -10,5 +10,7 @@
         // LLVM
         "rreverser.llvm",
         "basdp.language-gas-x86",
+        // Linux
+        "maelvalais.autoconf",
     ]
 }
