Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/ldc2.conf
+++ b/ldc2.conf
@@ -2,10 +2,14 @@
 {
     switches = [
         "-mcpu=i686",
-        "-I%%ldcbinarypath%%/../import",
-        "-gcc=i686-linux-musl-gcc"
+        "-gcc=i686-linux-musl-gcc",
+        "-defaultlib=phobos2-ldc,druntime-ldc",
+        "-L/home/ponyatov/player/root/lib"
     ];
     lib-dirs = [
-        "/home/ponyatov/player/root/lib"
     ];
+    post-switches = [
+        "-I%%ldcbinarypath%%/../import"
+    ];
+    rpath = "/home/ponyatov/player/root/lib";
 }
