--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,23 +3,23 @@
         { "command": "multiCommand.f11",
             "sequence": [ "workbench.action.files.saveAll",
                 { "command": "workbench.action.terminal.sendSequence",
-                    "args": {"text": "\u000D clear ; LANG=C make format \u000D"}}]},
+                    "args": {"text": "\u000D clear ; LANG=C make all format \u000D"}}]},
         { "command": "multiCommand.f12",
             "sequence": [ "workbench.action.files.saveAll",
                 { "command": "workbench.action.terminal.sendSequence",
-                    "args": {"text": "\u000D clear ; LANG=C make all \u000D"}}]}
+                    "args": {"text": "\u000D clear ; LANG=C make run \u000D"}}]}
     ],
 
     // files
     "files.exclude": {
-        "root/lib/modules/*/build": true,
+        "root/lib/modules/*/build" : true,
         "root/lib/modules/*/source": true,
     },
     "files.associations": {
-        "*.S": "gas",
+        "*.S"     : "gas",
         "*.kernel": "makefile",
         "*.uclibc": "makefile",
-        "*.bb": "makefile",
+        "*.bb"    : "makefile",
     },
 
     // editor
@@ -51,8 +51,8 @@
         "${userHome}/D/ref",
         "${userHome}/.dub/packages"
     ],
-    "d.dubPath": "/usr/bin/dub",
-    "d.dmdPath": "/usr/bin/dmd",
-    "d.dubCompiler": "/usr/bin/dub",
+    "d.dubPath"    : "/usr/bin/dub",
+    "d.dmdPath"    : "/usr/bin/dmd",
+    "d.dubCompiler": "/usr/bin/dmd",
     "d.toolchainRequirements.dub": "1.34.0"
 }
